# face-detection

./: .gitignore  CMakeLists.txt  main.cpp
cascades/: eye.xml  frontal_face.xml  nose.xml  profile_face.xml  smile.xml
